PDF Item Component: make pdf item component a grid so that item bar takes up approximately 76% of grid and the other 3 icons are 8%. Still have to fix image alignment. first icon after the item bar is too close to the item bar.

--- a/src/view/css/App.css
+++ b/src/view/css/App.css
@@ -66,7 +66,9 @@
 }
 
 .pdf-item {
-  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 76% 8% 8% 8%;
+  align-items: center;
   width:97%;
   height: 77px;
 }
